--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,9 @@
 *.user
 *.userosscache
 *.sln.docstates
-.generated.sln
+# Ignore solution files
+*.sln
+
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
